--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+## Informations sur la BDD à exploiter
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/festicovoit?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username = tony
+spring.datasource.password = password
+
+## Autoriser l'affichage des requêtes SQL faites par Hibernate
+spring.jpa.show-sql=true
+
+## Gérer Hibernate
+spring.jpa.hibernate.ddl-auto = update
 
